# hyprland-qtutils

./: .gitignore  CMakeLists.txt
src/: Dialog.cpp
utils/dialog/: CMakeLists.txt  main.cpp  main.qml
